--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0",
-    "react-vertical-timeline-component": "3.6.0"
+    "react-vertical-timeline-component": "3.6.0",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
